CSS Sprite画像のキャッシュ対策を忘れていたので対応。

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -441,7 +441,7 @@ a.statshirt {
 }
 
 .sprite {
-    background-image: url(/images/stamp/stampspritesheet.png?d=20170506);
+    background-image: url(/images/stamp/stampspritesheet.png?d=20171127_2);
 }
 
 .sprite-stamp001 {
