--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20180624_2")
-    script(src="/javascripts/client.js?d=20170506", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20181111")
+    script(src="/javascripts/client.js?d=20181111", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -69,7 +69,8 @@ html(lang="ja")
     div.clearboth
     div#animation-canvas-wrapper
       canvas#animation-canvas
-    div#updated.updated ならび順を保存しました
+    div#updated.popupMessage ならび順を保存しました
+    div#copied.popupMessage コピーしました
     div#scrollToTop.scrollToTop ↑
     div.footer
       p &copy;2014
