--- a/src/css/style.css
+++ b/src/css/style.css
@@ -441,7 +441,7 @@ a.statshirt {
 }
 
 .sprite {
-    background-image: url(/images/stamp/stampspritesheet.png?d=20180624_2);
+    background-image: url(/images/stamp/stampspritesheet.png?d=20181219);
 }
 
 .sprite-stamp001 {
