10万ツイートの小ネタ。

--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20190106_3")
-    script(src="/javascripts/client.js?d=20181111", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20190222")
+    script(src="/javascripts/client.js?d=20190222", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
