--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -35,7 +35,7 @@ html(lang="ja")
           p あなたのすたちゅー
           p#onlineLocalClickCount
           p#onlineUserCount
-      a#tweet.tweet.arrow(target="_blank")
+      a#tweet.tweet.arrow(target="_blank", rel="noopener")
         p ツイート
       a#count.count.arrow #{tweetCount}
       a.linestamp(href="https://store.line.me/stickershop/product/1372640")
@@ -55,7 +55,7 @@ html(lang="ja")
       a.hobo_stabook(href="https://7144.booth.pm/items/304792")
       a.statshirt(href="https://startune.booth.pm/items/232555")
         p すたTシャツ
-      a.statobashi(target="_blank", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
+      a.statobashi(target="_blank", rel="noopener", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
         p すたとばし
           br
           | ですくとっぷ
