すたンプを4種類追加。

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -507,379 +507,379 @@ a.statshirt {
 }
 
 .sprite {
-    background-image: url(/images/stamp/stampspritesheet.png?d=20190831);
+  background-image: url(/images/stamp/stampspritesheet.png?d=20200202);
 }
 
 .sprite-stamp001 {
-    background-position: 0 0;
+  background-position: 0 0;
 }
 
 .sprite-stamp002 {
-    background-position: 0 -100px;
+  background-position: 0 -100px;
 }
 
 .sprite-stamp003 {
-    background-position: 0 -200px;
+  background-position: 0 -200px;
 }
 
 .sprite-stamp004 {
-    background-position: 0 -300px;
+  background-position: 0 -300px;
 }
 
 .sprite-stamp005 {
-    background-position: 0 -400px;
+  background-position: 0 -400px;
 }
 
 .sprite-stamp006 {
-    background-position: 0 -500px;
+  background-position: 0 -500px;
 }
 
 .sprite-stamp007 {
-    background-position: 0 -600px;
+  background-position: 0 -600px;
 }
 
 .sprite-stamp008 {
-    background-position: 0 -700px;
+  background-position: 0 -700px;
 }
 
 .sprite-stamp009 {
-    background-position: 0 -800px;
+  background-position: 0 -800px;
 }
 
 .sprite-stamp010 {
-    background-position: 0 -900px;
+  background-position: 0 -900px;
 }
 
 .sprite-stamp011 {
-    background-position: 0 -1000px;
+  background-position: 0 -1000px;
 }
 
 .sprite-stamp012 {
-    background-position: 0 -1100px;
+  background-position: 0 -1100px;
 }
 
 .sprite-stamp013 {
-    background-position: 0 -1200px;
+  background-position: 0 -1200px;
 }
 
 .sprite-stamp014 {
-    background-position: 0 -1300px;
+  background-position: 0 -1300px;
 }
 
 .sprite-stamp015 {
-    background-position: 0 -1400px;
+  background-position: 0 -1400px;
 }
 
 .sprite-stamp016 {
-    background-position: 0 -1500px;
+  background-position: 0 -1500px;
 }
 
 .sprite-stamp017 {
-    background-position: 0 -1600px;
+  background-position: 0 -1600px;
 }
 
 .sprite-stamp018 {
-    background-position: 0 -1700px;
+  background-position: 0 -1700px;
 }
 
 .sprite-stamp019 {
-    background-position: 0 -1800px;
+  background-position: 0 -1800px;
 }
 
 .sprite-stamp020 {
-    background-position: 0 -1900px;
+  background-position: 0 -1900px;
 }
 
 .sprite-stamp021 {
-    background-position: 0 -2000px;
+  background-position: 0 -2000px;
 }
 
 .sprite-stamp022 {
-    background-position: 0 -2100px;
+  background-position: 0 -2100px;
 }
 
 .sprite-stamp023 {
-    background-position: 0 -2200px;
+  background-position: 0 -2200px;
 }
 
 .sprite-stamp024 {
-    background-position: 0 -2300px;
+  background-position: 0 -2300px;
 }
 
 .sprite-stamp025 {
-    background-position: 0 -2400px;
+  background-position: 0 -2400px;
 }
 
 .sprite-stamp026 {
-    background-position: 0 -2500px;
+  background-position: 0 -2500px;
 }
 
 .sprite-stamp027 {
-    background-position: 0 -2600px;
+  background-position: 0 -2600px;
 }
 
 .sprite-stamp028 {
-    background-position: 0 -2700px;
+  background-position: 0 -2700px;
 }
 
 .sprite-stamp029 {
-    background-position: 0 -2800px;
+  background-position: 0 -2800px;
 }
 
 .sprite-stamp030 {
-    background-position: 0 -2900px;
+  background-position: 0 -2900px;
 }
 
 .sprite-stamp031 {
-    background-position: 0 -3000px;
+  background-position: 0 -3000px;
 }
 
 .sprite-stamp032 {
-    background-position: 0 -3100px;
+  background-position: 0 -3100px;
 }
 
 .sprite-stamp033 {
-    background-position: 0 -3200px;
+  background-position: 0 -3200px;
 }
 
 .sprite-stamp034 {
-    background-position: 0 -3300px;
+  background-position: 0 -3300px;
 }
 
 .sprite-stamp035 {
-    background-position: 0 -3400px;
+  background-position: 0 -3400px;
 }
 
 .sprite-stamp036 {
-    background-position: 0 -3500px;
+  background-position: 0 -3500px;
 }
 
 .sprite-stamp037 {
-    background-position: 0 -3600px;
+  background-position: 0 -3600px;
 }
 
 .sprite-stamp038 {
-    background-position: 0 -3700px;
+  background-position: 0 -3700px;
 }
 
 .sprite-stamp039 {
-    background-position: 0 -3800px;
+  background-position: 0 -3800px;
 }
 
 .sprite-stamp040 {
-    background-position: 0 -3900px;
+  background-position: 0 -3900px;
 }
 
 .sprite-stamp041 {
-    background-position: 0 -4000px;
+  background-position: 0 -4000px;
 }
 
 .sprite-stamp042 {
-    background-position: 0 -4100px;
+  background-position: 0 -4100px;
 }
 
 .sprite-stamp043 {
-    background-position: 0 -4200px;
+  background-position: 0 -4200px;
 }
 
 .sprite-stamp044 {
-    background-position: 0 -4300px;
+  background-position: 0 -4300px;
 }
 
 .sprite-stamp045 {
-    background-position: 0 -4400px;
+  background-position: 0 -4400px;
 }
 
 .sprite-stamp046 {
-    background-position: 0 -4500px;
+  background-position: 0 -4500px;
 }
 
 .sprite-stamp047 {
-    background-position: 0 -4600px;
+  background-position: 0 -4600px;
 }
 
 .sprite-stamp048 {
-    background-position: 0 -4700px;
+  background-position: 0 -4700px;
 }
 
 .sprite-stamp049 {
-    background-position: 0 -4800px;
+  background-position: 0 -4800px;
 }
 
 .sprite-stamp050 {
-    background-position: 0 -4900px;
+  background-position: 0 -4900px;
 }
 
 .sprite-stamp051 {
-    background-position: 0 -5000px;
+  background-position: 0 -5000px;
 }
 
 .sprite-stamp052 {
-    background-position: 0 -5100px;
+  background-position: 0 -5100px;
 }
 
 .sprite-stamp053 {
-    background-position: 0 -5200px;
+  background-position: 0 -5200px;
 }
 
 .sprite-stamp054 {
-    background-position: 0 -5300px;
+  background-position: 0 -5300px;
 }
 
 .sprite-stamp055 {
-    background-position: 0 -5400px;
+  background-position: 0 -5400px;
 }
 
 .sprite-stamp056 {
-    background-position: 0 -5500px;
+  background-position: 0 -5500px;
 }
 
 .sprite-stamp057 {
-    background-position: 0 -5600px;
+  background-position: 0 -5600px;
 }
 
 .sprite-stamp058 {
-    background-position: 0 -5700px;
+  background-position: 0 -5700px;
 }
 
 .sprite-stamp059 {
-    background-position: 0 -5800px;
+  background-position: 0 -5800px;
 }
 
 .sprite-stamp060 {
-    background-position: 0 -5900px;
+  background-position: 0 -5900px;
 }
 
 .sprite-stamp061 {
-    background-position: 0 -6000px;
+  background-position: 0 -6000px;
 }
 
 .sprite-stamp062 {
-    background-position: 0 -6100px;
+  background-position: 0 -6100px;
 }
 
 .sprite-stamp063 {
-    background-position: 0 -6200px;
+  background-position: 0 -6200px;
 }
 
 .sprite-stamp064 {
-    background-position: 0 -6300px;
+  background-position: 0 -6300px;
 }
 
 .sprite-stamp065 {
-    background-position: 0 -6400px;
+  background-position: 0 -6400px;
 }
 
 .sprite-stamp066 {
-    background-position: 0 -6500px;
+  background-position: 0 -6500px;
 }
 
 .sprite-stamp067 {
-    background-position: 0 -6600px;
+  background-position: 0 -6600px;
 }
 
 .sprite-stamp068 {
-    background-position: 0 -6700px;
+  background-position: 0 -6700px;
 }
 
 .sprite-stamp069 {
-    background-position: 0 -6800px;
+  background-position: 0 -6800px;
 }
 
 .sprite-stamp070 {
-    background-position: 0 -6900px;
+  background-position: 0 -6900px;
 }
 
 .sprite-stamp071 {
-    background-position: 0 -7000px;
+  background-position: 0 -7000px;
 }
 
 .sprite-stamp072 {
-    background-position: 0 -7100px;
+  background-position: 0 -7100px;
 }
 
 .sprite-stamp073 {
-    background-position: 0 -7200px;
+  background-position: 0 -7200px;
 }
 
 .sprite-stamp074 {
-    background-position: 0 -7300px;
+  background-position: 0 -7300px;
 }
 
 .sprite-stamp075 {
-    background-position: 0 -7400px;
+  background-position: 0 -7400px;
 }
 
 .sprite-stamp076 {
-    background-position: 0 -7500px;
+  background-position: 0 -7500px;
 }
 
 .sprite-stamp077 {
-    background-position: 0 -7600px;
+  background-position: 0 -7600px;
 }
 
 .sprite-stamp078 {
-    background-position: 0 -7700px;
+  background-position: 0 -7700px;
 }
 
 .sprite-stamp079 {
-    background-position: 0 -7800px;
+  background-position: 0 -7800px;
 }
 
 .sprite-stamp080 {
-    background-position: 0 -7900px;
+  background-position: 0 -7900px;
 }
 
 .sprite-stamp081 {
-    background-position: 0 -8000px;
+  background-position: 0 -8000px;
 }
 
 .sprite-stamp082 {
-    background-position: 0 -8100px;
+  background-position: 0 -8100px;
 }
 
 .sprite-stamp083 {
-    background-position: 0 -8200px;
+  background-position: 0 -8200px;
 }
 
 .sprite-stamp084 {
-    background-position: 0 -8300px;
+  background-position: 0 -8300px;
 }
 
 .sprite-stamp085 {
-    background-position: 0 -8400px;
+  background-position: 0 -8400px;
 }
 
 .sprite-stamp086 {
-    background-position: 0 -8500px;
+  background-position: 0 -8500px;
 }
 
 .sprite-stamp087 {
-    background-position: 0 -8600px;
+  background-position: 0 -8600px;
 }
 
 .sprite-stamp088 {
-    background-position: 0 -8700px;
+  background-position: 0 -8700px;
 }
 
 .sprite-stamp089 {
-    background-position: 0 -8800px;
+  background-position: 0 -8800px;
 }
 
 .sprite-stamp090 {
-    background-position: 0 -8900px;
+  background-position: 0 -8900px;
 }
 
 .sprite-stamp091 {
-    background-position: 0 -9000px;
+  background-position: 0 -9000px;
 }
 
 .sprite-stamp092 {
-    background-position: 0 -9100px;
+  background-position: 0 -9100px;
 }
 
 .sprite-stamp093 {
-    background-position: 0 -9200px;
+  background-position: 0 -9200px;
 }
 
 .sprite-stamp094 {
@@ -896,4 +896,20 @@ a.statshirt {
 
 .sprite-stamp097 {
   background-position: 0 -9600px;
+}
+
+.sprite-stamp098 {
+  background-position: 0 -9700px;
+}
+
+.sprite-stamp099 {
+  background-position: 0 -9800px;
+}
+
+.sprite-stamp100 {
+  background-position: 0 -9900px;
+}
+
+.sprite-stamp101 {
+  background-position: 0 -10000px;
 }
