リプライ用のモードを実装。

--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -64,6 +64,11 @@ html(lang="ja")
           br
           | てきすと
         textarea#replytext(readonly)
+      div#reply-mode.mode.mode2
+        label りぷらい
+          br
+          | もーど
+        label#reply-mode-label.modelabel.off OFF
     div.clearboth
     div#animation-canvas-wrapper
       canvas#animation-canvas
