すたンプを4種類追加。

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -921,3 +921,19 @@ a.statshirt {
 .sprite-stamp101 {
   background-position: 0 -10000px;
 }
+
+.sprite-stamp102 {
+  background-position: 0 -10100px;
+}
+
+.sprite-stamp103 {
+  background-position: 0 -10200px;
+}
+
+.sprite-stamp104 {
+  background-position: 0 -10300px;
+}
+
+.sprite-stamp105 {
+  background-position: 0 -10400px;
+}
