すたンプ検索を実装。

--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20201123")
-    script(src="/javascripts/client.js?d=20200916", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20210109")
+    script(src="/javascripts/client.js?d=20210109", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -69,6 +69,8 @@ html(lang="ja")
           br
           | もーど
         label#reply-mode-label.modelabel.off OFF
+      div#search.search
+        label すたンプ検索
     div.clearboth
     div#animation-canvas-wrapper
       canvas#animation-canvas
