--- a/src/css/style.css
+++ b/src/css/style.css
@@ -531,7 +531,7 @@ a.statshirt {
 }
 
 .sprite {
-  background-image: url(/images/stamp/stampspritesheet.png?d=20210816);
+  background-image: url(/images/stamp/stampspritesheet.png?d=20220529);
 }
 
 .sprite-stamp001 {
@@ -1000,4 +1000,20 @@ a.statshirt {
 
 .sprite-stamp117 {
   background-position: 0 -11600px;
+}
+
+.sprite-stamp118 {
+  background-position: 0 -11700px;
+}
+
+.sprite-stamp119 {
+  background-position: 0 -11800px;
+}
+
+.sprite-stamp120 {
+  background-position: 0 -11900px;
+}
+
+.sprite-stamp121 {
+  background-position: 0 -12000px;
 }
