--- a/src/css/style.css
+++ b/src/css/style.css
@@ -303,7 +303,7 @@ a.stabook {
 
 a.hobo_stabook {
   position: relative;
-  background-image: url(/images/hobo_stabook.png);
+  background-image: url(/images/hobo_stabook2.png);
   background-position: center center;
 }
 
