--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20220529")
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20220603")
     script(src="/javascripts/client.js?d=20210109", defer)
     script.
       var _id         = "#{id}";
@@ -52,7 +52,7 @@ html(lang="ja")
       a.sta4koma(href="http://sta4koma.rgx6.com/")
         p 4コマまんが
       a.stabook(href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
-      a.hobo_stabook(href="https://7144.booth.pm/items/304792")
+      a.hobo_stabook(href="https://7144.booth.pm/items/3873604")
       a.statobashi(target="_blank", rel="noopener", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
         p すたとばし
           br
