--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang="ja")
   head
     meta(charset="utf-8")
-    meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう,ツイッター,Twitter,スタンプ,すたンプ")
-    meta(name="description", content="不思議な生物すたちゅーのツイッター用すたンプです。")
+    meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう,X,ツイッター,Twitter,スタンプ,すたンプ")
+    meta(name="description", content="不思議な生物すたちゅーのX用すたンプです。")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
@@ -36,8 +36,6 @@ html(lang="ja")
           p#onlineLocalClickCount
           p#onlineUserCount
       a#tweet.tweet.arrow(target="_blank", rel="noopener")
-        p ツイート
-      a#count.count.arrow #{tweetCount}
       a.linestamp(href="https://store.line.me/stickershop/product/1372640")
         p LINEすたンプ
       a.furoshiki(href="https://rgx.booth.pm/")
